fix: center text on iOS devices

--- a/src/blocks/card/__likes-counter/card__likes-counter.css
+++ b/src/blocks/card/__likes-counter/card__likes-counter.css
@@ -1,5 +1,5 @@
 .card__likes-counter {
-    text-align: center;
+    align-self: center;
     margin: 3px 0 0 0;
     color: #000;
     font-size: 13px;
